[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "v2_samplesheet_maker"
version = "4.2.4.post20240220125103"
description = "v2 SampleSheet maker"
readme = "Readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docopt >= 0.6.2, < 1",
    "pandas >= 2.1.2, < 3",
    "pydantic >= 2.4.2, < 3",
    "verboselogs >= 1.7, < 2",
]
authors = [
    { name = "Alexis Lucattini", email = "alexis.lucattini@umccr.org" },
]

[project.urls]
Homepage = "https://github.com/umccr/v2-samplesheet-maker"
"Bug Tracker" = "https://github.com/umccr/v2-samplesheet-maker/issues"

[project.scripts]
v2-samplesheet-maker = "v2_samplesheet_maker.run.v2_samplesheet_writer:main"
v2-samplesheet-to-json = "v2_samplesheet_maker.run.v2_samplesheet_reader:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
build = [
    "build",
]
deploy = [
    "twine",
]
toml = [
    "tomli_w >= 1.0.0, < 2",
]

[tool.setuptools]
script-files = [
    "scripts/build-runinfo-xml-from-reads-json.sh",
    "scripts/build-samplesheet-and-validate-with-bcl-convert.sh",
]
